<resources>
    <string name="app_name">Android Playground</string>
    <string name="label_chat">Chat</string>
    <string name="label_calls">Calls</string>
    <string name="label_status">Status</string>
    <string name="label_whatsapp_clone">Whatsapp Clone</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_plus">plus</string>
    <string name="label_form_chat">Form Chat</string>
    <string name="label_username">Username</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_submit">Submit</string>
    <string name="label_message">Message</string>
</resources>